--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,6 +20,7 @@
     background-position: center;
     background-size: cover;
     height: 25rem;
+    /* height: auto; */
 }
 
 .top-section h2 {
@@ -92,8 +93,10 @@ section .main-body{
     position: relative;
     height: 0;
     top:min(-65px,max(-100px,calc(-1*100vw/12)));
+    /* top: auto; */
     max-width: 55em;
     margin: 0 1.5rem 0 0;
+    /* margin: auto; */
     float: right;
     z-index: 9000;
 }
@@ -101,6 +104,7 @@ section .main-body{
 #avatar img {
     height: max(130px,min(200px,calc(100vw/6)));
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    /* margin-bottom: 2rem; */
 }
 
 @media screen and (max-width: 991px) {
@@ -108,5 +112,6 @@ section .main-body{
         margin: 0;
     }
 }
+
 
 
